--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,32 @@
   -webkit-user-select: none;
   -ms-user-select: none;
 }
+nav a {
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+nav a,
+ .mobile-menu a {
+  color: white;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  border-bottom: 2px solid transparent;
+  font-weight: 600;
+  transition: border-color 0.3s ease;
+}
+nav a.active,
+.mobile-menu a.active {
+  border-bottom: 2px solid white;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.8rem 2rem;
+  color: white;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 80px;
+ z-index: 1000;
+}
