--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,9 @@ header {
   top: 80px;
   padding: 1rem;
   z-index: 1000;
-background: orange;
+  background: orange;
+  height: 20px;
+  width: 100%;
 }
 .mobile-menu a {
   color: white;
