--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@
   -webkit-user-select: none;
   -ms-user-select: none;
 }
+.logo-img {
+  width: 15%;
+  height: auto;
+  z-index: 1;
+ border-radius: 5px;
+}
+
 nav {
   display: flex;
   gap: 1rem;
