--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 2rem;
   color: white;
   position: fixed;
   top: 0;
