--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,13 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem;
+ 
   color: white;
   position: fixed;
   top: 0;
   width: 100%;
   height: 80px;
+  margin:20px
 }
 .hamburger {
   display: none;
