--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,12 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
- 
   color: white;
   position: fixed;
   top: 0;
   width: 100%;
-  height: 80px;
-  margin:20px
+  height:30%;
+ 
 }
 .hamburger {
   display: none;
