--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,7 @@ header {
   top: 0;
   width: 100%;
   height: 80px;
-  margin-top: 10px;
-  padding:3rem;
+  padding: 3rem 3rem;
 }
 .hamburger {
   display: none;
