--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ header {
   height: 25px;
   justify-content: center;
   position: relative;
- 
+ margin:10; 
 }
 .hamburger span {
   height: 3px;
@@ -99,14 +99,13 @@ header {
   display: none;
   flex-direction: column;
   position: fixed;
-  top: 100px;
-  padding: 1rem;
-  z-index: 1000; 
-  width: 100%;
+  top: 90px;
+  padding: 0.9rem;
+  z-index: 1000;
 }
 .mobile-menu a {
   color: white;
-  padding: 1rem 0;
+  padding: 0.9rem 0;
   z-index: 0;
 }
 main {
