--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ nav a.active,
   border-bottom: 2px solid white;
 }
 header {
+background:orange;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -96,6 +97,7 @@ header {
   transform: rotate(-45deg);
 }
 .mobile-menu{
+background:orange;
   display: none;
   flex-direction: column;
   position: fixed;
