Atualizar o style.css

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ background:orange;
   height: 25px;
   justify-content: center;
   position: relative;
- margin:10; 
+ margin:10px; 
 }
 .hamburger span {
   height: 3px;
