--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,8 @@ header {
   padding: 0.9rem;
   z-index: 1000;
   background-color:orange;
-  border-radius:10px;
-margin: 10px; 
+  border-radius: 10px 0;
+  margin: 20px; 
 }
 .mobile-menu a {
   color: white;
