--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,9 @@ header {
   height: 25px;
   justify-content: center;
   position: relative;
- margin:10px; 
+  margin:10px; 
+  margin-left: auto; /* empurra para a direita */
+  margin-right: 10px; /* espaço da borda */
 }
 .hamburger span {
   height: 3px;
