--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ header {
   z-index: 1000;
   background-color:orange;
   border-radius: 10px 0 0 10px;
-  margin: 20px 0; 
+  margin: 0 20px; 
   min-width: 20%;
 }
 .mobile-menu a {
