--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,8 @@ header {
   z-index: 1000;
   background-color:orange;
   border-radius: 10px 0 0 10px;
-  margin: 0 20px; 
-  min-width: 20%;
+font-size:1.2rem;
+  min-width: 40%;
 }
 .mobile-menu a {
   color: white;
