--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ main {
   right: 20px;
   width: 300px;
   background: white;
-  border: 2px solid orange;
+  border: 4px solid orange;
   border-radius: 12px;
   padding: 1rem;
   z-index: 999;
@@ -206,7 +206,7 @@ main {
 
 .mini-carrinho h3 {
   margin-bottom: 0.5rem;
-  color: #c71585;
+  color: black;
 }
 
 .itens-carrinho {
