Atualizar o produto.css

--- a/css/produto.css
+++ b/css/produto.css
@@ -30,6 +30,7 @@
   box-shadow: 0 5px 15px rgba(0,0,0,0.1);
   padding: 20px;
   transition: transform 0.3s ease;
+width: 40%;
 }
 
 .card-produto:hover {
