--- a/css/produto.css
+++ b/css/produto.css
@@ -6,7 +6,7 @@
 .produtos-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr); /* padrão: celular 2 colunas */
-  gap: 20px;
+  gap: 30px;
   margin-top: 20px;
 }
 
@@ -31,6 +31,7 @@
   padding: 20px;
   transition: transform 0.3s ease;
   width: 100%;
+  max-width: 300px;
 }
 
 .card-produto:hover {
