Atualizar o style.css

--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ main {
   color: white;
 }
 #produto{
+  min-height: 130vh;
   background-color: white;
   background-attachment: fixed;
   background-size: cover;
