--- a/css/style.css
+++ b/css/style.css
@@ -264,9 +264,8 @@ main {
   font-weight: bold;
   font-size: 12px;
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  
+  width: 20%;
+  height:auto;
   border: 2px solid white;
 }
 }
