--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ main {
 /* Estilo para cada notificação */
 
 .notificacao {
-  background-color: Black;
+  background-color: orange;
   color: white;
   padding: 15px 20px;
   border-radius: 8px;
